fixed text fonts and alignment

--- a/projects/styles.css
+++ b/projects/styles.css
@@ -46,14 +46,27 @@ li {
 }
 
 article {
+    text-align: center;
     padding-top: 2rem;
     
+}
+
+h2 {
+    font-family: 'Libre Caslon Display', sans-serif;
 }
 
 article img {
     width: 100%;
 }
 
+h3 {
+
+}
+
+p {
+    text-align: left;
+    font-size: .8rem;
+}
 
 @media (min-width: 427px)  {
 
@@ -109,7 +122,7 @@ article img {
     ul li {
         font-size: 1.1rem;
     }
-    
+
     article {
         padding-top: 0;
     }
